Common Lang (C) Black Rook Software, All rights reserved.

Slated for 2.9.1
================

- Changed: JSON string writing is more strict with character ranges.

Changed in 2.9.0
================

- Added: com.blackrook.lang.replacer.
- Changed: Parser.nextToken() adds an error on exception.


Changed in 2.8.0
================

- MAJOR: Deprecated packages, classes, and methods PURGED.


Changed in 2.7.0
================

NOTE: Next version will be removing deprecated packages, classes, and methods!

- Fixed: If a tag has a qualified name, the XMLStruct name is now the 
  qualified name.
- Fixed: Lexer now pays attention to the decimal point character in the Kernel.
- Moved: Lexeme types to LexerKernel from Lexer. Update your code. Should be easy.
- Deprecated: Parser.getTypeErrorText() and Parser.matchTypeStrict() have been deprecated.

Changed in 2.6.1
================

- Changed/Fixed: JSONDefaultConverter should not have exported static fields.

Changed in 2.6.0
================

- Requires: Commons 2.19.0

Changed in 2.5.1
================

- Added: Additional JSONWriter and JSONReader methods for conveniently reading
  JSON and converting them to objects.

Changed in 2.5.0
================

- Requires: Java 7 or higher.
- Requires: Commons 2.17.0.
- Deprecated: CTokenizer - moved to Commons project as CommonTokenizer.

Changed in 2.4.0
================

- Requires: Commons 2.15.0.
- Changed: JSONObject now converts Enum types to strings and back by default.
- Changed: JSONObject now converts to Objects from other types for object
  members.
- Added: JSONIgnore annotation set on getters and setters to be ignored for
  default JSON conversion.
- Changed: JSONObject.getConverter() and JSONObject.setConverter() are now
  public.
- Changed: Source indentation style.

Changed in 2.3.2
================

- Changed: More documentation cleanup.

Changed in 2.3.1
================

- Changed/Fixed: Some documentation cleanup.

Changed in 2.3.0
================
