@@ -4,6 +4,7 @@ Slated for 2.9.1
 ================
 
 - Changed: JSON string writing is more strict with character ranges.
+- Added: CommonLexer.pushIncludedResource(String).
 
 Changed in 2.9.0
 ================
